--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,17 +16,20 @@
 }
 
 .streetlight {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   width: 300px;
   height: 650px;
-  margin: 50px auto;
+  margin: auto;
   border: 5px solid black;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(54, 54, 54, 0.295);
 }
 
 .circle {
-  width: 150px;
-  height: 150px;
-  margin: 50px auto;
+  width: 180px;
+  height: 180px;
   border-radius: 50%;
 }
 
